fix align

--- a/Projects/7° Project - mistery-letter/style.css
+++ b/Projects/7° Project - mistery-letter/style.css
@@ -10,6 +10,7 @@
 
 .container-main {
   background-image: url('./images/letter.jpg');
+  background-position: 50%;
   background-size: cover;
   align-items: center;
   display: flex;
